<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/boardImageView"
        android:layout_width="333dp"
        android:layout_height="349dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/board"
        android:contentDescription="@string/lines_of_board" />

    <ImageButton
        android:id="@+id/cellTwoImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cross"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image2"/>

    <ImageButton
        android:id="@+id/cellOneImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow1_2"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cellThreeImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow1_3"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cellFourImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow1_1"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cellFiveImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow2_2"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/cellSixImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow2_3"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/cellSevenImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow3_1"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cellEightImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow3_2"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cellNineImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/buttonrow3_3"
        app:layout_constraintStart_toStartOf="@+id/boardImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="334dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardImageView" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/playA"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsTextView" />


</android.support.constraint.ConstraintLayout>